This is a failure I'm just trying to change branches

--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "dependencies": {
+    "antd": "^3.19.8",
+    "react": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "antd": "^3.19.8"
+    "react-scripts": "^3.0.1"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +24,17 @@
   "bugs": {
     "url": "https://gitlab.com/nate998877/capstone/issues"
   },
-  "homepage": "https://gitlab.com/nate998877/capstone#readme"
+  "homepage": "https://gitlab.com/nate998877/capstone#readme",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
