--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "antd": "^3.19.8",
     "connected-react-router": "^6.4.0",
     "history": "^4.9.0",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-moment": "^0.9.2",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
