try to add .yml

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "capstone",
+  "homepage": "https://nate998877.gitlab.io/capstone",
   "version": "1.0.0",
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
@@ -35,7 +36,7 @@
   "bugs": {
     "url": "https://gitlab.com/nate998877/capstone/issues"
   },
-  "homepage": "https://gitlab.com/nate998877/capstone#readme",
+  //"homepage": "https://gitlab.com/nate998877/capstone#readme",
   "browserslist": {
     "production": [
       ">0.2%",
